2 sprint 3 less before button for filter

--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "styled-components": "^6.1.17",
-    "uuid": "^11.1.0",
-    "yarn": "^1.22.22"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/react": "19.0.2",
