--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "styled-components": "^6.1.17",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@types/node": "^22.15.17",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
     "@vitejs/plugin-react-swc": "3.7.2",
     "globals": "15.14.0",
     "typescript": "5.7.2",
     "vite": "6.0.6",
-    "vitest": "2.1.8"
+    "vitest": "^3.1.3"
   }
 }
